--- a/src/app/register/components/actividad-form/actividad-form.component.html
+++ b/src/app/register/components/actividad-form/actividad-form.component.html
@@ -78,7 +78,22 @@
     </div>
     <span class="p-error" *ngIf="isValidField('diabetesFactor')">
         {{getFieldError('diabetesFactor')}}
-      </span>
+    </span>
+
+    <div class="flex flex-column gap-2" *ngIf="isDiabetic">
+      <label for="ICR">Introduce tu ICR (Relación Carbohidratos-Insulina)</label>
+      <p-inputNumber
+        formControlName="ICR"
+        styleClass="w-full"
+        id="ICR"
+        name="ICR"
+        mode="decimal"
+        [maxFractionDigits]="2"
+      />
+    </div>
+    <span class="p-error" *ngIf="isValidField('ICR')">
+        {{getFieldError('ICR')}}
+    </span>
     <div class="flex justify-content-between">
       <p-button routerLink="/register/personal" label="Anterior" [rounded]="true"/>
       <p-button type="submit" label="Siguiente" [rounded]="true"/>
