--- a/src/app/calories/components/graphic/graphic.component.html
+++ b/src/app/calories/components/graphic/graphic.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <p-chart #chart type="line" [data]="data" [options]="options" />
+  <p-chart #chart type="line" [data]="data" [options]="options" class="w-2 h-2rem"/>
 </div>
 
 
