--- a/src/app/modify-profile/pages/modify-profile/modify-profile.component.html
+++ b/src/app/modify-profile/pages/modify-profile/modify-profile.component.html
@@ -90,13 +90,13 @@
           <div class="mb-3">
             <label for="insulinaFactor">Factor de Insulina</label>
           </div>
-          <input formControlName="insulinaFactor" pInputNumber id="insulinaFactor" type="text" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
+          <input formControlName="insulinaFactor" pInputText id="insulinaFactor" type="number" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
         </div>
         <div class="field">
           <div class="mb-3">
             <label for="ICR">ICR</label>
           </div>
-          <input formControlName="ICR" pInputNumber id="ICR" type="text" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
+          <input formControlName="icr" pInputText id="ICR" type="number" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
         </div>
         <div class="field">
           <div class="mb-3">
