Haciendo la pagina de diabetes. Se añaden los componentes y servicios necesarios para recoger datos

--- a/src/app/diabetes/pages/diabetes-page/diabetes-page.component.html
+++ b/src/app/diabetes/pages/diabetes-page/diabetes-page.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="flex align-items-center justify-content-center gap-8 mb-5">
     <div class="flex-1">
-      <calories-food-info [history]="history" [selectedDate]="date"></calories-food-info>
+      <food-info-diabetes [history]="history" [selectedDate]="date"></food-info-diabetes>
     </div>
     <div class="flex-1">
       <diabetes-polar-graphic></diabetes-polar-graphic>
