--- a/src/app/diabetes/components/search-food-diabetes/search-food-diabetes.component.html
+++ b/src/app/diabetes/components/search-food-diabetes/search-food-diabetes.component.html
@@ -55,7 +55,7 @@
                   <div class="flex flex-column gap-2 flex-1" >
                     <span class="text-center">Raciones</span>
                     <div [style]="{'background-color': fatColor}" class="border-round flex justify-content-center">
-                      <span class="text-white">Porciones</span>
+                      <span class="text-white">{{ portions }}</span>
                     </div>
                   </div>
 <!--                  <div class="flex flex-column gap-2 flex-1" >
@@ -101,7 +101,7 @@
                 <div class="flex flex-column gap-2 flex-1" >
                   <span class="text-center">Raciones</span>
                   <div [style]="{'background-color': fatColor}" class="border-round flex justify-content-center">
-                    <span class="text-white">Porciones</span>
+                    <span class="text-white">{{ foodAdded.portions }}</span>
                   </div>
                 </div>
 <!--                <div class="flex flex-column gap-2 flex-1" >
