--- a/src/app/diabetes/components/polar-graphic/polar-graphic.component.html
+++ b/src/app/diabetes/components/polar-graphic/polar-graphic.component.html
@@ -1,2 +1,5 @@
-<p-chart type="polarArea" [data]="data" [options]="options" class="w-full md:w-[30rem]" />
+<div class="flex justify-content-center">
+  <p-chart type="polarArea" [data]="data" [options]="options" class="w-6" />
+</div>
+
 
