--- a/src/app/diabetes/components/search-food-diabetes/search-food-diabetes.component.html
+++ b/src/app/diabetes/components/search-food-diabetes/search-food-diabetes.component.html
@@ -2,16 +2,16 @@
   <div *ngIf="selectedMeal" class="p-fluid">
     <div class="field">
       <label for="search">Buscar alimentos</label>
-      <form class="flex gap-2 mb-4">
+      <form class="flex gap-2 mb-4" [formGroup]="searchForm">
         <input
-          #searchTerm
+          formControlName="searchTerm"
           id="search"
           type="text"
           pInputText
-          (keydown.enter)="searchFoods(searchTerm.value)"
+          (keydown.enter)="searchFoods()"
           placeholder="Escribe el nombre del alimento..."
         />
-        <p-button (click)="searchFoods(searchTerm.value)" icon="pi pi-search"></p-button>
+        <p-button (click)="searchFoods()" icon="pi pi-search"></p-button>
 
       </form>
 
@@ -55,7 +55,7 @@
                   <div class="flex flex-column gap-2 flex-1" >
                     <span class="text-center">Raciones</span>
                     <div [style]="{'background-color': fatColor}" class="border-round flex justify-content-center">
-                      <span class="text-white">{{ portions }}</span>
+                      <span class="text-white">{{ calculatePortions(food.carbohydrate) }}</span>
                     </div>
                   </div>
 <!--                  <div class="flex flex-column gap-2 flex-1" >
