--- a/src/app/shared/top-bar/top-bar.component.html
+++ b/src/app/shared/top-bar/top-bar.component.html
@@ -13,33 +13,62 @@
       routerLink="/modify-profile"
       [rounded]="true"
       [text]="true"
+      size="large"
+      severity="secondary"
+      [styleClass]="isLightTheme ? 'dark' : 'light'"
     >
     </p-button>
-    <i class="pi pi-moon mr-3 cursor-pointer" style="font-size: 1.5rem" (click)="changeTheme()" *ngIf="isLightTheme"></i>
-    <i class="pi pi-sun mr-3 cursor-pointer" style="font-size: 1.5rem" (click)="changeTheme()" *ngIf="!isLightTheme"></i>
+    <p-button
+      *ngIf="isLightTheme"
+      (click)="changeTheme()"
+      icon="pi pi-moon"
+      [rounded]="true"
+      [text]="true"
+      size="large"
+      severity="secondary"
+      [styleClass]="isLightTheme ? 'dark' : 'light'"
+    >
+    </p-button>
+    <p-button
+      *ngIf="!isLightTheme"
+      (click)="changeTheme()"
+      icon="pi pi-sun"
+      [rounded]="true"
+      [text]="true"
+      size="large"
+      severity="secondary"
+      [styleClass]="isLightTheme ? 'dark' : 'light'"
+    >
+    </p-button>
     <div *ngIf="!userLogged">
-
       <div class="home-page-links flex align-items-center text-black-alpha-90">
         <p-button
           icon="pi pi-user"
           routerLink="/login"
-          [styleClass]="'p-button-outlined p-button-rounded p-button-secondary p-button-text p-2 ' + (isLightTheme ? 'labelColor' : 'labelColorWhite')"
-          label="Iniciar sesión"
+          label="INICIAR SESIÓN"
+          size="small"
+          [rounded]="true"
+          [text]="true"
+          severity="secondary"
+          [styleClass]="isLightTheme ? 'dark' : 'light'"
         >
         </p-button>
       </div>
     </div>
     <div *ngIf="userLogged">
-
       <div class="home-page-links flex align-items-center text-black-alpha-90">
-
-        <div class="no-underline text-black-alpha-90 flex align-items-center gap-2">
-          <p-avatar image="top-bar/memoji.jpg" shape="circle" size="xlarge" *ngIf="isLightTheme"></p-avatar>
-          <p-avatar image="top-bar/memoji-dark-mode.jpg" shape="circle" size="xlarge" *ngIf="!isLightTheme"></p-avatar>
+        <div class="no-underline text-black-alpha-90 flex align-items-center gap-2 pl-2">
+          <p-avatar image="top-bar/memoji.jpg" shape="circle" size="large" *ngIf="isLightTheme"></p-avatar>
+          <p-avatar image="top-bar/memoji-dark-mode.jpg" shape="circle" size="large" *ngIf="!isLightTheme"></p-avatar>
           <p-button
             (click)="logout()"
-            [styleClass]="'p-button-outlined p-button-rounded p-button-secondary p-button-text p-2 ' + (isLightTheme ? 'labelColor' : 'labelColorWhite')"
-            label="CERRAR SESION">
+            label="CERRAR SESIÓN"
+            severity="secondary"
+            size="small"
+            [rounded]="true"
+            [text]="true"
+            [styleClass]="isLightTheme ? 'dark' : 'light'"
+          >
           </p-button>
         </div>
       </div>
