feat(Login/Register) responsive design

--- a/src/app/login/pages/login-page/login-page.component.html
+++ b/src/app/login/pages/login-page/login-page.component.html
@@ -1,11 +1,10 @@
 <main class="flex max-h-screen">
-    <div class="flex flex-1 justify-content-center align-items-center p-7 max-h-full w-6">
-        <div class="w-6 h-full">
-            <img src="login/login-image.jpg" alt="" class="decorator-img w-full h-full border-round-2xl">
-        </div>
-
+  <div class="hidden md:flex flex-1 justify-content-center align-items-center p-7 max-h-full w-6">
+    <div class="w-6 h-full">
+      <img src="login/login-image.jpg" alt="" class="decorator-img w-full h-full border-round-2xl">
     </div>
-    <div class="flex flex-column flex-1 justify-content-center align-items-start">
+  </div>
+  <div class="flex flex-column flex-1 justify-content-center align-items-center md:align-items-start">
         <div class="field-container lg:w-6">
             <div class="field flex align-items-center">
                 <h2 class="font-light mr-3">Bienvenido de nuevo</h2> <i class="pi pi-check" style="font-size: 1.5rem"></i>
