--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,42 +1,24 @@
-<footer class="pl-5 pr-5 pb-3 pt-3">
-<!--  <div class="flex justify-content-between mb-5">
-    <div class="flex-1 flex flex-column justify-content-center">
-      <p-avatar image="top-bar/logo-test.png"></p-avatar>
-      <p class="text-center text-blue-500">Tu aplicación con la que puedes controlar tus niveles de azúcar en sangre, tu alimentación y manetenerte en buena forma</p>
+<footer class="pl-3 pr-3 pb-3 pt-3">
+  <div class="flex flex-column sm:flex-row justify-content-between align-items-center gap-4">
+    <div class="flex justify-content-center sm:justify-content-start flex-1">
+      <p-avatar image="top-bar/logo-test.png" size="large"></p-avatar>
     </div>
-    <div class="flex-1 flex justify-content-evenly justify-content-center">
-      <div>
-        <span>Links</span>
-        <ul class="p-0">
-          <li><a class="no-underline" href="#">Link 1</a></li>
-          <li><a class="no-underline" href="#">Link 2</a></li>
-          <li><a class="no-underline" href="#">Link 3</a></li>
-        </ul>
-      </div>
-      <div>
-        <span>Links</span>
-        <ul class="p-0">
-          <li><a class="no-underline" href="#">Link 1</a></li>
-          <li><a class="no-underline" href="#">Link 2</a></li>
-          <li><a class="no-underline" href="#">Link 3</a></li>
-        </ul>
-      </div>
+    <div class="flex justify-content-center flex-1">
+      <p class="text-center mt-2 sm:mt-0">© 2024 Controla-T. Proyecto final Desarrollo de Aplicaciones Web Óscar Velasco Portela</p>
     </div>
-
-  </div>
-  <hr/>-->
-  <div class="flex justify-content-between align-items-center">
-    <p-avatar image="top-bar/logo-test.png" size="large" class="flex-1"></p-avatar>
-    <!--<p class="text-center text-blue-500">Tu aplicación con la que puedes controlar tus niveles de azúcar en sangre, tu alimentación y manetenerte en buena forma</p>-->
-    <div class="flex-1">
-      <p class="text-center mt-5">© 2024 Controla-T. Proyecto final Desarrollo de Aplicaciones Web Óscar Velasco Portela</p>
-    </div>
-    <div class=" flex gap-6 flex-1 justify-content-end">
-      <a href="https://www.linkedin.com/in/oscarvelasco1/"><p-avatar image="footer/linkedin.png"></p-avatar></a>
-      <a href="https://www.instagram.com"><p-avatar image="footer/instagram.png"></p-avatar></a>
-      <a href="https://www.youtube.com"><p-avatar image="footer/youtube.png"></p-avatar></a>
-      <a href="https://www.whatsapp.com"><p-avatar image="footer/whatsapp.png"></p-avatar></a>
-
+    <div class="flex justify-content-center sm:justify-content-end gap-3 flex-1">
+      <a href="https://www.linkedin.com/in/oscarvelasco1/">
+        <p-avatar image="footer/linkedin.png"></p-avatar>
+      </a>
+      <a href="https://www.instagram.com">
+        <p-avatar image="footer/instagram.png"></p-avatar>
+      </a>
+      <a href="https://www.youtube.com">
+        <p-avatar image="footer/youtube.png"></p-avatar>
+      </a>
+      <a href="https://www.whatsapp.com">
+        <p-avatar image="footer/whatsapp.png"></p-avatar>
+      </a>
     </div>
   </div>
 </footer>
