feat(Login/Register) responsive design

--- a/src/app/home/pages/home-page/home-page.component.html
+++ b/src/app/home/pages/home-page/home-page.component.html
@@ -1,12 +1,12 @@
 <main>
   <section class="principal-section flex flex-column justify-content-center align-items-center mb-8">
-    <h1 class="text-5xl text-center w-8">Optimiza tu salud con el cálculo preciso de macronutrientes e insulina</h1>
+    <h1 class="text-5xl text-center w-full md:w-8">Optimiza tu salud con el cálculo preciso de macronutrientes e insulina</h1>
     <p class="text-l text-center w-8 text-700">Nuestro sistema avanzado te ayuda a calcular la cantidad exacta de insulina y macronutrientes que necesitas para controlar tu diabetes de manera efectiva, mejorando tu bienestar diario y optimizando tus niveles de azúcar en sangre.</p>
-    <div class="mt-8 flex flex-wrap justify-content-center gap-8 font-light">
-      <a routerLink="/calories" class="p-button no-underline font-light px-8 py-3 text-blue-50">
+    <div class="mt-8 flex flex-wrap justify-content-center gap-8 font-light w-full">
+      <a routerLink="/calories" class="p-button no-underline font-light text-blue-50 px-3 justify-content-center w-4 md:w-4">
         Calcular macronutrientes
       </a>
-      <a routerLink="/diabetes" class="p-button no-underline font-light px-8 py-3 text-blue-50">
+      <a routerLink="/diabetes" class="p-button no-underline font-light text-blue-50 px-2 justify-content-center w-4 md:w-4">
         Calcular insulina
       </a>
     </div>
