--- a/src/app/register/pages/register-page/register-page.component.css
+++ b/src/app/register/pages/register-page/register-page.component.css
@@ -12,3 +12,10 @@ main{
 .p-error{
   color:red;
 }
+
+@media screen and (max-width: 500px) {
+  .card .p-steps-title {
+    white-space: wrap;
+    text-align: center;
+  }
+}
