--- a/src/app/home/components/informative-section/informative-section.component.html
+++ b/src/app/home/components/informative-section/informative-section.component.html
@@ -1,10 +1,10 @@
-<section [id]="data.id" class="section px-8 py-5 mb-5">
+<section [id]="data.id" class="px-1 py-5 mb-5 md:px-8">
   <div class="container flex flex-wrap">
     <div
       class="content flex-1 p-2 flex justify-content-center flex-column sm:flex-order-0"
       [ngClass]="{'lg:flex-order-1': data.reverse}"
     >
-      <h2>{{ data.title }}</h2>
+      <h2 class="text-center sm:text-left">{{ data.title }}</h2>
       <p>{{ data.description }}</p>
       <ul>
         <li *ngFor="let benefit of data.benefits">{{ benefit }}</li>
@@ -12,7 +12,7 @@
     </div>
     <div class="image-container p-2 flex flex-1 align-items-center justify-content-center sm:flex-order-0">
       <div
-        class="w-9 text-center sm:m-0"
+        class="text-center sm:m-0 sm:w-9"
         [ngClass]="{'ml-auto': !data.reverse, 'mr-auto': data.reverse}"
       >
         <img [src]="data.imageSrc" [alt]="data.imageAlt" class="w-full border-round-2xl"/>
