feat(Login/Register) responsive design and use url production

--- a/src/app/calories/pages/calories-page/calories-page.component.html
+++ b/src/app/calories/pages/calories-page/calories-page.component.html
@@ -1,5 +1,5 @@
-<main class="mr-8 ml-8">
-  <div class="card flex gap-4 mb-4">
+<main class="px-4 md:mx-8">
+  <div class="flex flex-column gap-4 mb-4 md:flex-row">
     <p>¡Hola, {{localStorage.getItem("userLogged")}}! segun los datos de tu perfil, tus calorías de mantenimiento son de : <b>{{userTmb}} kcal</b>. Actualmente tu objetivo es:
       <b>{{userObjectiveName}}</b></p>
     <form class="flex gap-4" (submit)="saveUserObjective()" [formGroup]="userObjectiveForm" *ngIf="userWantsModifyObjective">
@@ -14,13 +14,12 @@
     </form>
     <p-button *ngIf="!userWantsModifyObjective" (click) = "modifyObjective()">Modificar preferencias</p-button>
   </div>
-
-  <div class="flex align-items-center mb-5">
-    <div>
+  <div class="flex flex-wrap mb-5 md:flex-nowrap">
+    <div class="m-auto">
       <calories-calendar (selectedDateChange)="onDateChange($event)"></calories-calendar>
     </div>
-    <div class="flex-1 ">
-      <calories-dought class="flex flex-wrap justify-content-around"></calories-dought>
+    <div class="w-full flex-none md:flex-1 md:w-auto">
+      <calories-dought class="flex md:flex-wrap md:justify-content-around"></calories-dought>
     </div>
   </div>
   <div class="flex align-items-center justify-content-center gap-8 mb-5">
@@ -32,5 +31,4 @@
     </div>
 
   </div>
-
 </main>
