Fix CSS en componentes

--- a/src/app/diabetes/components/graphic/graphic.component.html
+++ b/src/app/diabetes/components/graphic/graphic.component.html
@@ -1,1 +1,4 @@
-<p-chart #chart type="bar" [data]="data" [options]="options" />
+<p-card>
+  <p-chart #chart type="bar" [data]="data" [options]="options" />
+</p-card>
+
