--- a/src/app/diabetes/components/polar-graphic/polar-graphic.component.html
+++ b/src/app/diabetes/components/polar-graphic/polar-graphic.component.html
@@ -1,5 +1,7 @@
-<div class="flex justify-content-center">
-  <p-chart type="polarArea" [data]="data" [options]="options" class="w-6" />
-</div>
+<p-card>
+  <p-chart type="polarArea" [data]="data" [options]="options" class="w-7 inline-block" />
+</p-card>
+
+
 
 
