--- a/src/app/calories/components/calendar/calendar.component.html
+++ b/src/app/calories/components/calendar/calendar.component.html
@@ -1,1 +1,1 @@
-<p-calendar styleClass="w-full" [inline]="true" [(ngModel)]="selectedDate" dateFormat="dd/mm/yy" (onSelect)="onDateSelect()"></p-calendar>
+<p-calendar [inline]="true" [(ngModel)]="selectedDate" dateFormat="dd/mm/yy" (onSelect)="onDateSelect()"></p-calendar>
