Cambiando la forma de recuperar el historial de 7 dias

--- a/src/app/calories/components/calendar/calendar.component.html
+++ b/src/app/calories/components/calendar/calendar.component.html
@@ -1,1 +1,1 @@
-<p-calendar [inline]="true" [(ngModel)]="selectedDate" dateFormat="dd/mm/yy" (onSelect)="onDateSelect()"></p-calendar>
+<p-calendar [inline]="true" [(ngModel)]="selectedDate" dateFormat="yyyy/mm/dd" (onSelect)="onDateSelect()"></p-calendar>
