Ahora se obtiene el historial de las graficas desde el backend

--- a/src/app/calories/pages/calories-page/calories-page.component.html
+++ b/src/app/calories/pages/calories-page/calories-page.component.html
@@ -24,7 +24,7 @@
   </div>
   <div class="flex align-items-center justify-content-center gap-8 mb-5">
     <div class=" flex-1 flex flex-wrap">
-      <calories-food-info [history]="history"></calories-food-info>
+      <calories-food-info></calories-food-info>
     </div>
     <div class="flex-1">
       <calories-graphic></calories-graphic>
