--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="pl-3 pr-3 pb-3 pt-3">
   <div class="flex flex-column sm:flex-row justify-content-between align-items-center gap-4">
     <div class="flex justify-content-center sm:justify-content-start flex-1">
-      <p-avatar image="top-bar/logo.png" class="flex align-items-center justify-content-center mt-2 mb-2" size="xlarge"></p-avatar>
+      <p-avatar [image]="isDarkTheme ? 'top-bar/logo-controlate.png' : 'top-bar/logo-controlate-dark.png'" class="logo flex align-items-center justify-content-center mt-2 mb-2" size="xlarge"></p-avatar>
     </div>
     <div class="flex justify-content-center flex-1">
       <p class="text-center mt-2 sm:mt-0">© 2024 Controla-T. Proyecto final Desarrollo de Aplicaciones Web Óscar Velasco Portela</p>
