--- a/src/app/shared/top-bar/top-bar.component.html
+++ b/src/app/shared/top-bar/top-bar.component.html
@@ -1,7 +1,7 @@
 <header class="top-bar flex align-items-center justify-content-between  " [ngStyle]="isLightTheme ? { 'background-color': '#fff' } : { 'background-color': '#111827' }">
   <p-menubar [model]="items" [style]="{ 'font-family': 'Poppins', 'border-radius': '3rem'}" class="flex-1">
   </p-menubar>
-  <p-avatar image="top-bar/logo.png" class="flex align-items-center justify-content-center mt-2 mb-2" size="xlarge"></p-avatar>
+  <p-avatar [image]="isDarkTheme ? 'top-bar/logo-controlate.png' : 'top-bar/logo-controlate-dark.png'" class="logo flex align-items-center justify-content-center mt-2 mb-2" size="xlarge"></p-avatar>
   <div class="flex-1 flex justify-content-end align-items-center pr-5">
     <p-button
       icon="pi pi-cog"
