Respetar tema light o dark en recarga de navegador

--- a/src/app/shared/top-bar/top-bar.component.css
+++ b/src/app/shared/top-bar/top-bar.component.css
@@ -2,7 +2,7 @@
   position: fixed;
   z-index: 5;
   top: 10px;
-  left: 10px;
+  left: 1%;
   width:98%;
   border-radius: 40px;
   border:solid lightgrey 1px;
