--- a/src/app/diabetes/components/search-food-diabetes/search-food-diabetes.component.html
+++ b/src/app/diabetes/components/search-food-diabetes/search-food-diabetes.component.html
@@ -20,7 +20,7 @@
       </div>
 
     </div>
-    <div class="flex gap-8">
+    <div class="flex gap-8 flex-wrap">
       <p-table [value]="foodsSearched" *ngIf="foodsSearched.length > 0">
         <ng-template pTemplate="header">
           <tr>
