--- a/src/app/diabetes/pages/diabetes-page/diabetes-page.component.html
+++ b/src/app/diabetes/pages/diabetes-page/diabetes-page.component.html
@@ -1,6 +1,6 @@
-<main class="mr-8 ml-8">
+<main class="mr-3 ml-3 md:mr-8 md:ml-8">
 
-  <div class="flex align-items-center mb-5 gap-7">
+  <div class="flex align-items-center justify-content-center mb-5 gap-7 flex-wrap">
     <div >
       <calories-calendar></calories-calendar>
     </div>
@@ -8,7 +8,7 @@
       <diabetes-graphic></diabetes-graphic>
     </div>
   </div>
-  <div class="flex align-items-center justify-content-center gap-8 mb-5">
+  <div class="flex align-items-center justify-content-center gap-8 mb-5 flex-wrap">
     <div class="flex-1">
       <food-info-diabetes [history]="history"></food-info-diabetes>
     </div>
