--- a/src/app/calories/components/search-food/search-food.component.html
+++ b/src/app/calories/components/search-food/search-food.component.html
@@ -1,5 +1,5 @@
 <p-dialog [(visible)]="visible" [modal]="true" header="{{ selectedMeal?.name }}" (onHide)="closeModal()">
-  <div *ngIf="selectedMeal" class="p-fluid">
+  <div *ngIf="selectedMeal" class="p-fluid scroll">
     <div class="field">
       <label for="search">Buscar alimentos</label>
       <form class="flex gap-2 mb-4" [formGroup]="searchForm">
@@ -21,7 +21,7 @@
 
     </div>
     <div class="flex gap-8 flex-wrap">
-      <p-table [value]="foodsSearched" *ngIf="foodsSearched.length > 0">
+      <p-table class="flex-1" [value]="foodsSearched" *ngIf="foodsSearched.length > 0">
         <ng-template pTemplate="header">
           <tr>
             <th>Alimentos</th>
@@ -70,7 +70,7 @@
           </tr>
         </ng-template>
       </p-table>
-      <p-table [value]="getuserHistoryByMeal(selectedMeal.name)" [ngClass]="foodsSearched.length > 0 ? 'w-1/2' : 'w-full'" *ngIf="getuserHistoryByMeal(selectedMeal.name).length > 0" >
+      <p-table class="flex-1" [value]="getuserHistoryByMeal(selectedMeal.name)" [ngClass]="foodsSearched.length > 0 ? 'w-1/2' : 'w-full'" *ngIf="getuserHistoryByMeal(selectedMeal.name).length > 0" >
         <ng-template pTemplate="header">
           <tr>
             <th>Alimentos Añadidos</th>
