feat(Scroll) add scroll when an element is added to the list

--- a/src/app/calories/components/progress-bar/progress-bar.component.css
+++ b/src/app/calories/components/progress-bar/progress-bar.component.css
@@ -1,4 +1,8 @@
 .p-progressbar-value{
-  max-width:100%
+  max-width:100%;
+  width: auto !important;
 }
 
+.p-progressbar-value span {
+  margin: 0 4px;
+}
