--- a/src/app/diabetes/components/search-food-diabetes/search-food-diabetes.component.html
+++ b/src/app/diabetes/components/search-food-diabetes/search-food-diabetes.component.html
@@ -96,7 +96,7 @@
       </p-table>
     </div>
   </div>
-  <div class="flex justify-content-end mt-3">
+  <div class="flex justify-content-end mt-3 scroll">
     <!--<p-button (click)="saveMeal()" label="Guardar" *ngIf="isToday()"></p-button>-->
     <p-button (click)="saveMeal()" label="Guardar"></p-button>
   </div>
